# sentra-fim-x-wythwool

./: Cargo.toml  LICENSE  README.md  config.sample.toml
scripts/: build.sh
src/: config.rs  fim.rs  lib.rs  main.rs  metrics.rs
tests/: basic.rs
