[package]
name = "sentra_fim"
version = "1.0.0"
edition = "2021"
authors = ["Mono GlaShyiz"]
license = "MIT"
description = "Cross-platform File Integrity Monitor with Prometheus metrics and JSONL audit log"
repository = "https://example.com/your-repo"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
notify = "6"
sha2 = "0.10"
walkdir = "2.5"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
prometheus = "0.13"
axum = "0.7"
hyper = { version = "1", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = "0.3"
blake3 = "1"
dunce = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dev-dependencies]
tempfile = "3"
